# LeakPro

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  env_fl.yml  env_mia.yml  env_synthetic.yml  environment.yml  external_licenses.txt  get_at_text.py  invertinggradients_one_image.py  leakpro.py  leakpro_main.py  leakprofl.py  pyproject.toml  pytest.ini  requirements.txt  test.py  third_party.txt
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: generate_changelog.yml  run_tests.yml
.leakpro_dev/: pyvenv.cfg
config/: adult.yaml  audit.yaml  cifar10.yaml  cinic10.yaml
config/dev_config/: adult.yaml  cifar10.yaml  cifar100.yaml  cinic10.yaml
dev_utils/: cifar100_input_handler.py  cifar10_gia_input_handler.py  cifar10_input_handler.py  data_modules.py  data_preparation.py  graph_utils.py  train.py
examples/: LICENSE  length-of-stay.md  molecule-property.md  surveillance.md  text-masking.md
examples/expm/: audit.yaml  dpsgd_handler.py  grud_dpsgd_main.ipynb  run_dpsgd_main.py  run_nonprivate_main.py
examples/expm/utils/: data_handler.py  dpsgd_model.py  gru_model_handler.py  non_private_model.py  utils.py
examples/gia/AMM_kit/: pytorch_leakpro_train_comparison.py  train_scaleout.py
examples/gia/GIA_base/: main.py  model.py
examples/gia/GIA_base_convnext/: convnext.py  model.py
examples/gia/GIA_base_convnext_imagenet/: README.md  _data.py  convnext.py  imagenet.py  imagenet_experiment.py  imagenet_experiments.py  maxvit_cifar.py  measuremodel.py  model.py  run.sh  swint_cifar.py  vit_b16_cifar.py
examples/gia/GIA_base_running/: main.py  model.py
examples/gia/adult/: adultGIAHandler.py  audit.yaml  main.py
examples/gia/bn_research/: README.md  attack_modifications.py  cifar.py  cifar100.py  main.py  main_copy.py  main_copy_copy.py  model.py  pre_train.py
examples/gia/celebA_inverting_1_image/: celebA.py  main.py  pre_training.py
examples/gia/cifar100_inverting_16_images/: cifar100.py  main.py
examples/gia/cifar10_gradinversion_1_image/: main.py
examples/gia/cifar10_inverting_1_image/: cifar.py  main.py
examples/gia/cifar10_inverting_audit/: cifar.py  main.py
examples/gia/cifar10_reconstruction/: audit.yaml  input_handler.py  main.ipynb  main.py
examples/gia/coco_yolo_1_image/: README.md  coco.py  download_coco.sh  main.py  model.py  prepare_coco.py  traineval.py
examples/gia/geiping_16_images_cifar100/: cifar100.py  main.py  model.py  pre_train.py
examples/gia/gia_cifar10_invertinggradients/: cifar.py  main.py  model.py
examples/gia/gia_modular_basic/: README.md  batch_performance.py  cifar.py  dimitrov.py  epoch_performance.py  label_inference_comparison.py  main.py  stg.py  visualize.py
examples/gia/gradient_based/: batch_performance.py  dimitrov.py  epoch_performance.py  main.py  model.py  stg.py  visualize.py
examples/gia/huang_cifar10_16_images/: main.py  model.py
examples/gia/huang_optuna/: main.py  model.py
examples/gia/inverting_celebA_1_image/: celebA.py  main.py
examples/mia/: toy_example_test_vectorized_rmia.ipynb
examples/report_handler/: ___report_handler_anomalies.ipynb  audit.yaml  report_handler.ipynb  report_handler_anomalies.ipynb  target_vs_shadow_model.ipynb  train_config.yaml
examples/synthetic_data/: adults.py  anomalies_example.ipynb  inference_example.ipynb  linkability_example.ipynb  los.py  modifications.md  report.ipynb  report_modified.ipynb  report_modified_v2.ipynb  singling_out_example.ipynb  singling_out_tree_example.ipynb  syn_text_pii_scanner_example.ipynb
examples/use-cases/: length-of-stay.md  molecule-property.md  surveillance.md  text-masking.md
leakpro/: README.md  __init__.py  audit.py  audit_report.py  core.py  dataset.py  import_helper.py  information_source.py  leakpro.py  metric.py  metric_result.py  model.py  models.py  optuna.py  pyproject.toml  pytest.ini  requirements.txt  run.py  schemas.py  setup.py  shadow_model_blueprints.py  signal.py  signal_extractor.py  train.py  utils.py
leakpro/attacks/: attack_base.py  attack_factory.py  attack_objects.py  attack_scheduler.py  attack_utils.py
leakpro/dev_utils/: data_preparation.py  graph_utils.py  train.py
leakpro/fl_utils/: __init__.py  client_data.py  data_utils.py  diffusion_handler.py  fl_client_simulator.py  gan_handler.py  gan_models.py  gia_module_to_functional.py  gia_optimizers.py  gia_train.py  img_utils.py  matching_utils.py  model_utils.py  save_text.py  similarity_measurements.py
leakpro/hyperparameter_tuning/: optuna.py
leakpro/input_handler/: abstract_gia_input_handler.py  abstract_input_handler.py  gia_handler.py  handler_setup.py  mia_handler.py  minv_handler.py  user_imports.py
leakpro/metrics/: attack_result.py
leakpro/mia_attacks/: attack_factory.py  attack_objects.py  attack_scheduler.py  attack_utils.py
leakpro/reporting/: attack_result.py  audit_report.py  gia_result.py  mia_result.py  minva_result.py  report_handler.py  report_utils.py  utils.py
leakpro/signals/: functional.py  signal.py  signal_extractor.py
leakpro/synthetic_data_attacks/: anomalies.py  inference_utils.py  leaky_synthesizer.py  linkability_utils.py  plots.py  singling_out_utils.py  utils.py
leakpro/terminal_ui/: __init__.py  __main__.py  api.py  io.py  steps.py
leakpro/tests/: __init__.py  conftest.py  constants.py  dummy_test.py  simple_test.py
leakpro/ui/: __init__.py  dashboard.py  runner.py
leakpro/user_code/: parent_template.py  user_definitions.py
leakpro/user_inputs/: abstract_gia_input_handler.py  abstract_input_handler.py  cifar10_gia_input_handler.py  cifar10_input_handler.py  handler_setup.py
leakpro/utils/: conversion.py  device.py  handler_logger.py  hardware_setup.py  import_helper.py  input_handler.py  logger.py  save_load.py  seed.py
leakpro/webapp/: .gitignore  Dockerfile.backend  docker-compose.yml
resources/: apache_header.tmpl  leakpro_ascii.txt  license_report_2026_05_04.md
test_adult/: model_0.pkl  models_metadata.pkl
tests/test_report_handler/: __init__.py
webapp_los_files/: LR_arch.py  LR_los_data_handler.py  LR_model_handler.py
(+650 files in other folders)
