
[project]
name = "leakpro"
version = "0.1.0"
description = "A package for privacy risk analysis"
authors = [{name = "LeakPro team", email = "johan.ostman@ai.se"}]
readme = "README.md"
license = {file="LICENSE"}
requires-python = '>=3.8,<3.13'

dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "seaborn",
  "dotmap",
  "jinja2",
  "tqdm",
  "joblib",
  "pyyaml",
  "scikit-learn",
  "pydantic",
  "ts2vec",
]

[project.optional-dependencies]
mia = ["torch", "torchvision", "optuna"]
synthetic = ["numba", "pydantic", "transformers", "sentence-transformers"]
federated = ["torch", "torchvision", "torchmetrics", "pytorch-ignite", "optuna", "albumentations"]
minv = ["torch", "torchvision", "optuna", "kornia"]

dev = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "coverage-badge",
  "ruff",
  "torch",  # from mia & federated
  "torchvision",  # from mia & federated
  "torchmetrics",  # from federated
  "numba",  # from synthetic
  "transformers",  # from synthetic
  "sentence-transformers",  # from synthetic
  "pytorch-ignite", # from federated
  "optuna", # federated and mia
  "kornia", # from minv
  "albumentations", # federated example
  "transformers", # federated example
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["leakpro*"]

[tool.ruff]
line-length = 130
target-version = "py39"

lint.select = [
  "ANN", "ARG", "B", "C4", "C90", "D", "DTZ", "E", "ERA", "F", "I", "N", "PD", "PGH", "PLC",
  "PLE", "PLR", "PLW", "PT", "Q", "RET", "S", "SIM", "T20", "TID", "W",
]

exclude = [
  ".venv",
  "./tests",
  "./leakpro/tests",
  "./examples",
]

lint.ignore = [
  "D401", # non-imperative-mood
  "PD901", # Avoid using df variable name as pd.Dataframe
  "PD011", # pandas-use-of-dot-values
  "PLR0913", # too-many-arguments in function
  "S101", # Using assert
  "PLR2004", # magic-value-comparison
  "D107", # Missing docstring in `__init__`
  "PLW2901", # redefined-loop-name
  "D202", # No blank lines allowed after function docstring
  "F811" # redefinition of function
]
