
[project]
name = "leakpro"
version = "0.1.0"
description = "A package for privacy risk analysis"
authors = [{name = "LeakPro team", email = "fazeleh.hoseini@ai.se"}]
readme = "README.md"
# The full license text is located in the LICENSE file in the root directory
license = "Apache-2.0"
requires-python = '>=3.8,<3.13'

dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "seaborn",
  "dotmap",
  "jinja2",
  "tqdm",
  "ipywidgets",
  "joblib",
  "pyyaml",
  "scikit-learn",
  "pydantic",
  "ts2vec",
  "umap-learn"
]

[project.optional-dependencies]
mia = ["torch", "torchvision", "optuna", "opacus"]
synthetic = ["numba", "pydantic", "transformers", "sentence-transformers"]
federated = ["torch", "torchvision", "torchmetrics", "pytorch-ignite", "optuna", "albumentations"]
minv = ["torch", "torchvision", "optuna", "kornia"]
# Habana Gaudi (HPU) extras. `habana-torch-plugin` itself must be pulled from
# Habana's index (see docs.habana.ai); we list `lightning-habana` here as it
# resolves cleanly from PyPI. Run `python -m leakpro.utils.hardware_setup
# --install` after installing the Habana SDK to pull these in.
hpu = ["lightning-habana"]

dev = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "coverage-badge",
  "ruff",
  # Pinned to 2.10.x because the currently shipping Habana plugin
  # (habana-torch-plugin 1.24.0.1007) hard-asserts torch's major.minor in
  # habana_frameworks.torch.required_version. Bumping the upper bound is safe
  # only when the Habana plugin is bumped to match. CUDA/CPU users can
  # override with their own torch wheel before `pip install -e .[dev]`.
  "torch>=2.10,<2.11",  # from mia & federated
  "torchvision>=0.25,<0.26",  # matches torch 2.10 series
  "torchmetrics",  # from federated
  "numba",  # from synthetic
  "transformers",  # from synthetic
  "sentence-transformers",  # from synthetic
  "pytorch-ignite", # from federated
  "optuna", # federated and mia
  "kornia", # from minv
  "opacus", # from mia
  "albumentations", # federated example
  "transformers", # federated example
  "requests",
  "pip-licenses",
  "licenseheaders"
]

[project.urls]
"Homepage" = "https://github.com/aidotse/LeakPro"
"Bug Tracker" = "https://github.com/aidotse/LeakPro/issues"
"License" = "https://github.com/aidotse/LeakPro/blob/main/LICENSE"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["leakpro*"]

[tool.ruff]
line-length = 130
target-version = "py39"

lint.select = [
  "ANN", "ARG", "B", "C4", "C90", "D", "DTZ", "E", "ERA", "F", "I", "N", "PD", "PGH", "PLC",
  "PLE", "PLR", "PLW", "PT", "Q", "RET", "S", "SIM", "T20", "TID", "W",
]

exclude = [
  ".venv",
  "./tests",
  "./leakpro/tests",
  "./examples",
]

lint.ignore = [
  "D401", # non-imperative-mood
  "PD901", # Avoid using df variable name as pd.Dataframe
  "PD011", # pandas-use-of-dot-values
  "PLR0913", # too-many-arguments in function
  "S101", # Using assert
  "PLR2004", # magic-value-comparison
  "D107", # Missing docstring in `__init__`
  "PLW2901", # redefined-loop-name
  "D202", # No blank lines allowed after function docstring
  "F811" # redefinition of function
]
